--- a/puppet.conf
+++ b/puppet.conf
@@ -6,6 +6,7 @@ rundir=/run/puppet
 factpath=$vardir/lib/facter
 prerun_command=/etc/puppet/etckeeper-commit-pre
 postrun_command=/etc/puppet/etckeeper-commit-post
+server=ip-10-0-1-24.us-west-2.compute.internal
 
 [master]
 # These are needed when the puppetmaster is run by passenger
